# NeuroFlow-HiDevs

./: .env.example  .gitignore  .secrets.baseline  README.md  pyproject.toml
.github/workflows/: build.yml  ci.yml  quality-gate.yml
backend/: Dockerfile  config.py  main.py  requirements.txt  worker.py
backend/api/: compare.py  finetune.py  health.py  ingest.py  pipelines.py  query.py
backend/db/: health.py  migrations.py  pool.py
backend/models/: pipeline.py
backend/monitoring/: metrics.py
backend/providers/: anthropic_provider.py  base.py  client.py  gemini_provider.py  openai_provider.py  router.py
backend/resilience/: backpressure.py  circuit_breaker.py  rate_limiter.py  timeout_manager.py
backend/security/: prompt_injection.py  secret_detector.py  validators.py
backend/tests/: test_resilience.py
docs/: api-contracts.md  architecture.md  data-models.md  deployment.md  retrospective.md  runbook.md
docs/adr/: 001-vector-store.md  002-chunking-strategy.md  003-evaluation-framework.md  004-model-routing.md
evaluation/: calibration_results.json  generation_eval.py  improvement_log.md  judge.py  quality_baseline.json  quality_final.json  retrieval_eval.py  retrieval_results.json
evaluation/calibration/: annotated_set.json
evaluation/metrics/: answer_relevance.py  context_precision.py  context_recall.py  faithfulness.py
frontend/: Dockerfile  package.json
infra/: docker-compose.prod.yml  docker-compose.yml
sdk/: README.md  pyproject.toml
sdk/examples/: quickstart.py
sdk/neuroflow/: __init__.py  client.py  models.py
(+39 files in other folders)
