[project]
name = "neuroflow-sdk"
version = "0.1.0"
description = "Python SDK for NeuroFlow API"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "httpx>=0.24.1",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
